added rest clients for interservice communicatin